feat: add endpoint to restore all databases to base snapshot
